--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,6 +9,98 @@
   <title>Sushiman Order</title>
 </head>
 <body>
+  <header>
+    <nav class="header__nav">
+      <div class="header__logo">
+        <h4 data-aos="fade-down">Sushiman</h4>
+        <div class="header__logo-overlay"></div>
+      </div>
+
+      <ul class="header__menu" data-aos="fade-down">
+        <li>
+          <a href="#menu">Menu</a>
+        </li>
+        <li>
+          <a href="#food">Food</a>
+        </li>
+        <li>
+          <a href="#services">Services</a>
+        </li>
+        <li>
+          <a href="#about-us">About Us</a>
+        </li>
+        <li>
+          <img src="assets/search.svg" alt="search" />
+        </li>
+      </ul>
+
+      <ul class="header__menu-mobile" data-aos="fade-down">
+        <li>
+          <img src="assets/menu.svg" alt="menu" />
+        </li>
+      </ul>
+    </nav>
+  </header>
   
+  <section class="hero">
+    <div class="hero_image">
+      <img src="assets/sushi-1.png" alt="sushi">
+      <h2 data-aos="fade-up">
+        日 <br>
+        本 <br>
+        食
+      </h2>
+      <div class="hero-image__overlay"></div>
+    </div>
+
+    <div class="hero-content">
+      <div class="hero-content-info">
+        <h1>Feel the taste of Japanese food</h1>
+        <p>Feel the taste of the most popular Japanese food from anywhere and anytime</p>
+
+        <div class="hero-content__buttons">
+          <button class="hero-content__order-button">Order Now</button>
+          <button class="hero-content__play-button">
+            <img src="assets/play-circle.svg" alt="Play">How to Order
+          </button>
+        </div>
+      </div>
+
+      <div class="hero-content__testimonial">
+        <div class="hero-content__customer flex-center">
+        <h4>24<span>k+</span></h4>
+        <p>Happy Customers</p>
+      </div>
+
+      <div class="hero-content__review">
+        <img src="assets/user.png" alt="user">
+        <p>"The best Japanese food delivery service you can get."</p>
+      </div>
+    </div>
+  </div>
+  </section>
+
+  <section id="about-us" class="about-us">
+    <div class="about-us__image">
+      <div class="about-us__image-sushi2">
+        <img src="assets/sushi-3.png" alt="sushi">
+      </div>
+      <button class="about-us__button">
+        Learn More
+        <img src="assets/arrow-up-right.svg" alt="learn more">
+      </button>
+      <div class="about-us__image-sushi3">
+        <img src="assets/sushi-2.png" alt="sushi">
+      </div>
+  </div>
+
+  <div class="about-us_content">
+    <p class="sushi__subtitle">About Us /  私たちに関しては </p>
+    <h3 class="sushi__title">Our mission is to bring true Japanese flavours to you.</h3>
+    <p class="sushi__description">We will continue to provide the experience of Omotenashi, the Japanese mindset of hospitality, with our shopping and dining for our customers.
+    </p>
+  </div>
+    
+  </section>
 </body>
 </html>
