Changed Page Titel

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image.png" href="assets/sushi-12.png">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js" defer></script>
-  <title>Sushiman Order</title>
+  <title> Order Sushiman </title>
 </head>
 <body>
   <header>
